# 28_threads

./: CMakeLists.txt  delete.cpp  fast_start.cpp  threads_test.cpp
tasks/: task_1.cpp  task_2.cpp  task_3.cpp
